# mcp-gsc

./: .env.example  .env.mcp_gsc_http  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  MIGRATION.md  README.md  auth.py  blocks.py  config.py  exceptions.py  fastmcp.json  flows.py  gsc_server.py  llms.txt  logging_config.py  mcp.json  oauth_script.py  pyproject.toml  requirements.txt  server.py  states.py  test_mcp_call.py
.hypothesis/constants/: 39c13d4099054b09  47daf8eca020c2ee  53780d2487d3e9c0  6941b954bf034fe8  6dbc0f34338895cb  7fcea3bf6f7b8bdc  a8479a6494380f21  aafc874096bf937e  aeeb6d056e7a9804  b1e3685817bf7854  d9a7e7c79f786c77  e6467f495f11351b
.kiro/specs/http-auth-migration/: design.md  tasks.md  (+1 more)
deploy/: Caddyfile.mcp-gsc.snippet  mcp-gsc.global.service  mcp-gsc.service
docs/: DEPLOYMENT.md  vibeblocks_refactor_plan.md
gsc_mcp/: __init__.py  auth.py  config.py  gsc_client.py  main.py  scoring.py  seo_analysis.py  server.py
gsc_mcp/tools/: __init__.py  destructive.py  gsc_read.py  seo_opportunities.py
tests/: conftest.py  test_destructive_registration.py  test_gsc_tools.py  test_scoring.py  test_seo_analysis.py  test_transport_config.py
tests/integration/: __init__.py  test_authentication.py  test_development_workflow.py  test_error_scenarios.py  test_http_server.py  test_production_jwt.py  test_stdio_compatibility.py
tests/property/: test_auth_properties.py  test_config_properties.py  test_logging_properties.py  test_server_properties.py
tests/unit/: test_auth_factory.py  test_configuration.py  test_logging.py  test_server_initialization.py
(+1 files in other folders)
