[project]
name = "mcp-search-console"
version = "0.4.0"
description = "Private Google Search Console MCP server (service account, HTTP/HTTPS)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Amin Foroutan", email = "aio@aminforoutan.com"}
]
keywords = ["mcp", "google search console", "seo", "search analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "google-api-python-client>=2.163.0",
    "google-auth-httplib2>=0.2.0",
    "mcp[cli]>=1.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mcp-gsc = "gsc_mcp.main:main"
mcp-search-console = "gsc_mcp.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gsc_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
